# obs-ai-caption

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  buildspec.json  plugin.yaml
.github/workflows/: push.yaml
cmake/common/: sherpa_onnx.cmake
cmake/macos/: buildspec.cmake
cmake/windows/: buildspec.cmake
data/locale/: en-US.ini
docs/: forum-description.md  signpath-setup.md  submission.md
scripts/: compute-sherpa-onnx-hashes.sh  deploy-macos.sh  obs-forum-submit.mjs  record-demo.sh  unquarantine-macos.sh
src/: asr-engine.cpp  asr-engine.h  audio-analyzer.cpp  audio-analyzer.h  audio-delay-buffer.cpp  audio-delay-buffer.h  audio-ring-buffer.cpp  audio-ring-buffer.h  caption-filter.cpp  caption-filter.h  constants.h  model-downloader.cpp  model-downloader.h  model-finder.cpp  model-finder.h  mute-word-list.cpp  mute-word-list.h  plugin-main.cpp  subtitle-manager.cpp  subtitle-manager.h
tests/: CMakeLists.txt  audio-analyzer-test.cpp  audio-delay-buffer-test.cpp  audio-ring-buffer-test.cpp  model-finder-test.cpp  mute-word-list-test.cpp  subtitle-manager-test.cpp  test-framework.h  test-main.cpp
